2008-07-10 Roman
- FIX:/UI/Vision: Exit form included widgets edit is fixed.
- !!:/UI/Vision: Resource cache support is added to runtime.
- /UI/Vision: Work pages attributes moved to QT object's atributes store.
- !:/UI/Vision: Include widget's scroll area support is added.
- FIX:/UI/Vision: Maximize and full screen runtime window mode is fixed.
- FIX:/UI/Vision: Update widgets runtime mechanism is fixed.


2008-07-10 Maxim
- FIX:/UI/Vision: Development widget pattern is fixed.


2008-07-10 Maxim
- !:/UI/Vision: Protocol shape is moved to new individual data per widget store mechanism for primitive ElFigure.
- !:/UI/Vision: Copy function for primitive ElFigure is added.


2008-07-09 Roman:
- /UI/Vision: Full screen and maximize run window attributes moved to project.
- /UI/Vision: Attributes pgOpen, pgNoOpenProc, pgGrp and pgOpenSrc moved from box shape to project's pages.
- !:/UI/Vision: Protocol shape is moved to new individual data per widget store mechanism.


2008-07-08 Roman:
- FIX:/UI/Vision: Big images scroll position lost on development is fixed.
- !:/UI/Vision: Diagramm shape is moved to new individual data per widget store mechanism.
- /UI/Vision: Unselect included widgets on development at lost focus is disabled.


2008-07-05 Roman
- FIX:/UI/Vision: Move childs widgets on development is fixed.
- !:/UI/Vision: Media shape is moved to new individual data per widget store mechanism.


2008-07-04 Roman
- !:/UI/Vision: Flags of development widgets write form changed.
- !:/UI/Vision: The individual shape data store mechanism changed and make performance optimal.
- !:/UI/Vision: Geometry parameters loading make optimal.
- FIX:/UI/Vision: The big widgets' load time is fixed into empty resource get function.
- !:/UI/WebVision: Automatic scroll enable on big mnemo support is added.


2008-07-03 Maxim,Roman
- FIX:/UI/Vision: Widget's update function fixed.
- FIX:/UI/Vision: ElFigure update view on atributes change is fixed.


2008-07-03 Roman